# thyme-sql

./: .poppy.toml  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
src/: main.rs
tests/: compose.yml  thyme.json
tests/queries/: select_default.sql
