[package]
name = "thyme-sql"
version = "0.1.8"
authors = ["Charlie Eeles <charlie.eeles@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Performance benchmark tool for Postgres queries"
repository = "https://github.com/Charlie-Eeles/thyme-sql"

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
comfy-table = "7.1.4"
dotenv = "0.15.0"
poppy-sql = "0.1.7"
serde_json = "1.0.149"
sqlformat = "0.5.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"]}
tokio = { version = "1.47.1", features = ["full"]}
